# semi-automated-analysis-of-nanohole-morphology-density

./: .gitignore  1_click_hole_coordinates.py  2_automatic_hole_depth_&_size.py  README.md  config.json  data_analysis.ipynb  pyproject.toml  requirements.txt
files/: clicked_points_20250630_124212.json  clicked_points_20251104_161744.json  dict_clicked_points_20250630_124212.json
scripts/: batch_open_and_level.ahk
tests/: test_click_logger.py  test_hole_depth.py
