[project]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Ans Imran",email = "ansimran18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tifffile (>=2025.2.18,<2026.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "mplcursors (>=0.6,<0.7)",
    "ipympl (>=0.9.7,<0.10.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "powerlaw (>=1.5,<2.0)"
]

[tool.poetry]
packages = [{include = "python_scripts", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
